--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export("%>%")
 export(abridge_df)
 export(are_paired)
 export(attr)
+export(blogdown_stop_server)
 export(break_methods)
 export(clipboard_readfrom)
 export(clipboard_writeto)
