--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(clipboard_readfrom)
 export(clipboard_writeto)
 export(denstogram)
 export(discretize)
+export(ecdfgram)
 export(file_head)
 export(file_tail)
 export(get_breaks)
