draft fns for mode

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,8 @@ export(label_breaks_cut)
 export(label_breaks_interval)
 export(label_breaks_value)
 export(memory_use)
+export(modemfv)
+export(modemfv_vctrs)
 export(normalize_text)
 export(pg_copy_file)
 export(pg_create_foreign_table)
