--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,8 @@ export(clipboard_writeto)
 export(denstogram)
 export(discretize)
 export(ecdfgram)
+export(ellipt_colnames)
+export(file_glimpse)
 export(file_head)
 export(file_tail)
 export(get_breaks)
