--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -70,6 +70,7 @@ reference:
 - contents:
   - file_head
   - file_tail
+  - file_glimpse
   - guess_types
 
 
@@ -103,6 +104,7 @@ reference:
   - normalize_text
   - are_paired
   - timestamp_it
+  - ellipt_colnames
   - "%#%"
   - "%#_%"
 
