add filter_duplicates and clean up a bit

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,8 @@ export(ellipt_colnames)
 export(file_glimpse)
 export(file_head)
 export(file_tail)
+export(filter_duplicates)
+export(filter_duplicates_dplyr)
 export(get_breaks)
 export(guess_types)
 export(is_invalid_number)
@@ -40,6 +42,7 @@ export(summarize_obj)
 export(tab)
 export(time_chunk)
 export(timestamp_it)
+importFrom(data.table,`:=`)
 importFrom(dplyr,arrange)
 importFrom(dplyr,case_when)
 importFrom(dplyr,count)
