add a few pg fns

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,10 +31,13 @@ export(memory_use)
 export(modemfv)
 export(modemfv_vctrs)
 export(normalize_text)
+export(pg_copy_data)
 export(pg_copy_file)
 export(pg_create_foreign_table)
 export(pg_create_table)
 export(pg_exists_table)
+export(pg_kill_query)
+export(pg_running_queries)
 export(pg_total_relation_size)
 export(phased_left_join)
 export(summarize_df)
