add parse annotations fns

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,8 @@ export("%>%")
 export(abridge_df)
 export(are_paired)
 export(attr)
+export(bar_just)
+export(bar_just_facet)
 export(blogdown_stop_server)
 export(break_methods)
 export(clipboard_readfrom)
@@ -31,6 +33,8 @@ export(memory_use)
 export(modemfv)
 export(modemfv_vctrs)
 export(normalize_text)
+export(parse_annotations)
+export(parse_single_annotation)
 export(pg_copy_data)
 export(pg_copy_file)
 export(pg_create_foreign_table)
