--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ export(memory_use)
 export(modemfv)
 export(modemfv_vctrs)
 export(normalize_text)
+export(open_file)
 export(parse_annotations)
 export(parse_single_annotation)
 export(pg_copy_data)
