--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(clipboard_readfrom)
 export(clipboard_writeto)
 export(denstogram)
 export(discretize)
+export(duckdb_explain_hook)
 export(ecdfgram)
 export(ellipt_colnames)
 export(file_glimpse)
